--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                Seu navegador não é compatível.
+            </iframe>
         </section>
 
         <section id="redes-sociais">
-
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="insta"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a>
         </section>
     </main>
 </body>
