--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </section>
 
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
             <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a> <br>
             <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a> <br>
             <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="insta"></a> <br>
