--- a/youtube.html
+++ b/youtube.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <img src="imagens/tela-youtube.png" alt="Youtube">
-    <a href="https://youtube.com/user/cursoemvideo" target="_blank">ACESSE</a>
+    <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">ACESSE</a>
 
 </body>
 </html>
